# Pokemon

./: .gitignore  CLAUDE.md  README.md  S3_INTEGRATION_README.md  config.py  example_s3_scraping.py  example_s3_training.py  pyproject.toml  run.sh  test_multiprocessing_fix.py  train.py
action_mapping_runs/action_mapping_20260518_141608/: events.out.tfevents.1779138968.04e57037-01.cloud.together.ai.3553524.0
clean_videos/pokemon_emerald/: Pokémon Emerald - Super Walkthrough.rkZMopvNV48_crop.json  Pokémon Emerald Full Walkthrough.J-x5yDTyU_c_crop.json  Pokémon Emerald Version HD - Full Game Walkthrough.Sv6h1JQY6GM_crop.json
data_collection/: data_config.py  frame_dataset.py  frame_extractor.py  pokemon_dataset_pipeline.py  pokemon_frame_loader.py  scrape_videos.py  video_cleaner.py
dynamics_model_pong_w_tokenizer_v2_512_action_w_corrected_upsample_dim_and_patch/: Untitled
idm/: codebook.py  config.py  eval.py  loss_fns.py  multi_frame_vqvae.py  residual_vqvae.py  run.sh  s3_utils.py  spatial_transformer.py  test_eval.py  train.py  training_args.py  vqvae.py
idm/data_collection/: frame_dataset.py  frame_extractor.py  pokemon_frame_loader.py  resumable_data_loader.py  scrape_videos.py  video_cleaner.py
idm/lapa/: nsvq.py  positional_bias.py
scripts/action_mapping/: interactive_inference.py  train.py
scripts/data/: generate_two_player_pong.py  sync_dataset_to_s3.py  visualize_two_player_pong_npz.py
scripts/dynamics_model/: __init__.py  inference.py  train.py  verify_tokenizer_checkpoint.py  visualize_loss_mask.py
scripts/latent_action_model/: train.py
scripts/video_tokenizer/: eval.py  oracle_decode_eval.py  post_train_rollout_mp4.py  post_train_tokenizer.py  train.py
src/action_mapping/: model.py
src/activations/: swiglu.py
src/data_collection/: dataset_loader.py  frame_dataset.py  frame_extractor.py  frame_filterer.py  pokemon_frame_loader.py  video_cleaner.py
src/dynamics_model/: checkpoints.py  create_model.py  model.py  training_args.py
src/idm/: codebook.py  encoder.py  eval.py  pyproject.toml  test_eval.py  train.py  vqvae.py  (+2 more)
tests/: test_sdpa_attention_equivalence.py
(+74 files in other folders)
