[project]
name = "pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.21.0",
    "dataclasses>=0.8",
    "einops>=0.8.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "tensorboard>=2.19.0",
    "truss>=0.9.95",
    "yt-dlp>=2025.5.22",
]
